fix merge